# plinth

./: .gitignore  .oxlintrc.json  CONTRIBUTING.md  LICENSE.md  README.md  THIRD_PARTY_NOTICES.md  biome.json  index.html  package.json  todolist.md
.githooks/: pre-commit
.github/workflows/: ci.yml  cicd.yml  docs.yml  release.yml
docs/: 3PK.md  BASECUTTER.md  CATALOG.md  CREATORS.md  INSTALL.md  MINIHOARD.md  SCATTER-ASSETS.md  SCATTER.md  index.md
docs/.vitepress/: config.mts
docs/guide/: distributing.md  getting-started.md  sharing.md
raw/: HANDOVER.md  render_mini.py  render_mini_example.rs
src/: App.vue  bindings.ts  main.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-test-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/resources/: base_cut.py  gen_landscape.py  render_mini.py  scatter_landscape.py
src-tauri/resources/scatter/: CREDITS.md  bone-deer-forelimb.stl  bone-deer-mandible.stl  bone-pilot-whale-mandible.stl  broadleaf-plant.stl  fern.stl  foliage-twigs-source.blend  foliage-twigs-source.blend1  forest-branch-scan.stl  forest-log-scan.stl  grass-tuft.stl  leaf-apple.stl  leaf-cherry.stl  leaf-cluster.stl  leaf-hazel.stl  leaf-lobed.stl  leaf-maple.stl  leaf-oak.stl  leaf-oval.stl  manifest.json  mushroom.stl  skull-deer.stl  skull-diplocaulus.stl  skull-hesperocyon.stl  skull-leptophoca-seal.stl  skull-pseudocynodictis.stl  twig-forked.stl  twig-straight.stl
src-tauri/src/: content_filter.rs  error.rs  lib.rs  main.rs  minihoard.rs  models.rs  process.rs  settings.rs
src-tauri/src/basecutter/: commands.rs  cutters.rs  generator.rs  job.rs  mod.rs  scatter.rs  scatter_assets.rs  stl_bbox.rs
src-tauri/src/catalog/: commands.rs  db.rs  dups.rs  layout.rs  mod.rs  normalize.rs  pack.rs  scanner.rs  sidecar.rs
src-tauri/src/file/: commands.rs  compression_jobs.rs  compressors.rs  import.rs  mod.rs  pack_manifest.rs  stage.rs  storage.rs  utils.rs  writer.rs
src-tauri/src/manifest/: mod.rs
src-tauri/src/models/: events.rs  mod.rs  models.rs
src-tauri/src/render/: batch.rs  commands.rs  engine.rs  mod.rs  provision.rs
src/assets/: styles.css
src/components/: BlenderSetupDialog.vue  CatalogCard.vue  CompressionStatus.vue  DateInput.vue  Example.test.ts  FileSelect.vue  ImageSelect.vue  ImportPackageModal.vue  LandscapeViewport.vue  ModalView.vue  ModelOverview.vue  MonthYearInput.vue  NumberInput.vue  ProgressBar.vue  RenderAdvanced.vue  Sidebar.vue  StlViewport.vue  Switch.vue  TagInput.vue  TextArea.vue  TextInput.vue  ToastContainer.vue  View.vue
src/components/catalog/: CatalogBatchBar.vue  CatalogBatchRenderModal.vue  CatalogBrowser.vue  CatalogDeleteModal.vue  CatalogDrawer.vue  CatalogDuplicatesPanel.vue  CatalogFacetHeader.vue  CatalogFooter.vue  CatalogNormalizeModal.vue  CatalogPrintModal.vue  CatalogResultBar.vue  CatalogStatusBanners.vue  CatalogToolbar.vue  CatalogViewerModals.vue
src/composables/: use3DPackageHandler.ts  useBaseCut.ts  useBatchRender.ts  useBlenderProvision.ts  useCatalogJobs.ts  useCompressionStatus.ts  useFileSelect.ts  useLandscapeGen.ts  useMinihoard.ts  useMinihoardDownload.ts  useOS.ts  usePackStatus.ts  useRenderStatus.ts  useScatter.ts  useSpaceMouse.test.ts  useSpaceMouse.ts  useStlDecode.ts
src/stores/: catalogStore.ts  releasesStore.ts  themeStore.ts  toastStore.ts
src/utils/: cloneRaw.test.ts  cloneRaw.ts  color.ts  cutFootprint.test.ts  cutFootprint.ts  cutterKinds.ts  events.ts  format.ts  magnetSuggest.test.ts  magnetSuggest.ts  meshComponents.test.ts  meshComponents.ts  placementGenerators.test.ts  placementGenerators.ts  placementGroups.test.ts  placementGroups.ts  placementName.test.ts  placementName.ts  placementUndo.test.ts  placementUndo.ts  promoOverlay.test.ts  promoOverlay.ts  renderLookSchema.test.ts  renderLookSchema.ts  stlGeometry.worker.ts
src/views/: AddSTL.vue  BaseCutter.vue  Catalog.vue  CreateRelease.vue  Finalize.vue  Minihoard.vue  Releases.vue  Render.vue  Settings.vue
tools/: curate_leaves.py  curate_polyhaven_forest.py  generate_scatter_foliage.py
