[package]
name = "stl-pack"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stl_pack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
blake3 = "1"
image = "0.25.6"
rusqlite = { version = "0.37", features = ["bundled"] }
once_cell = "1.21.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smartcrop2 = "0.4.0"
specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2.2.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript", "derive"] }
tokio = { version = "1.44.2", features = [
  "process",
  "io-util",
  "macros",
  "sync",
] }
uuid = { version = "1.4", features = ["v4", "serde"] }
walkdir = "2.5.0"
zip = "2.6.1"
file-id = "0.2.3"
