[package]
name = "plinth"
version = "0.2.0-alpha.1"
description = "Catalog, render, and distribute 3D-printable model libraries"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "plinth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
blake3 = "1"
image = "0.25.6"
rusqlite = { version = "0.37", features = ["bundled"] }
once_cell = "1.21.1"
# Blender download only. rustls: no OpenSSL build matrix on Windows;
# stream: progress + incremental hashing while the bytes arrive.
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "stream",
] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
smartcrop2 = "0.4.0"
specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri = { version = "2", features = ["protocol-asset"] }
# Plugin crates MUST stay in step with their @tauri-apps/plugin-* JS package —
# the two sides share an IPC wire format that drifts across minors. A skew is
# silent and nasty: dialog crate 2.2 + JS 2.7 showed confirm() dialogs whose
# every answer resolved false. Exact-pin the proven pairs; bump both together.
tauri-plugin-opener = "=2.2.6" # JS pinned 2.2.7; newer crate breaks reveal
tauri-plugin-store = "2.2.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "=2.7.1" # JS 2.7.1; older crate answers confirm() as bool, JS expects button label
tauri-plugin-os = "2"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript", "derive"] }
tokio = { version = "1.44.2", features = [
  "process",
  "io-util",
  "fs",
  "macros",
  "sync",
] }
uuid = { version = "1.4", features = ["v4", "serde"] }
walkdir = "2.5.0"
zip = "2.6.1"
file-id = "0.2.3"
